fix: align the tetris next div

--- a/tetris.css
+++ b/tetris.css
@@ -33,6 +33,7 @@ body {
 }
 
 #tetris-next {
+    align-self: center;
     width: 120px;
     height: 120px;
     display: grid;
